--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -31,6 +31,14 @@
     <!-- /# content wrap -->
     <script src="/static/assets/js/lib/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap-validator/0.5.3/js/bootstrapValidator.min.js"></script>
+
+    <!--文件上传-->
+    <link rel="stylesheet" href="/static/bootstrap/fileinput.min.css">
+    <script src="/static/bootstrap/fileinput.min.js"></script>
+    <script src="/static/bootstrap/fileinput_locale_zh.js"></script>
+
+    <!--编辑器-->
+    <script src="https://cdn.bootcss.com/showdown/1.9.0/showdown.min.js"></script>
 </head>
 
 <body>
@@ -48,8 +56,12 @@
                     <a class="sidebar-sub-toggle"><i class="ti-comment-alt"></i> 帖子 <span
                             class="sidebar-collapse-icon ti-angle-down"></span></a>
                     <ul>
-                        <li><a>所有帖子</a></li>
-                        <li><a>创建帖子</a></li>
+                        <li>
+                            <a>所有帖子</a>
+                        </li>
+                        <li>
+                            <a href="/page/post/create">创建帖子</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="{$nav['classify']|default=''}">
@@ -126,10 +138,10 @@
 <!-- bootstrap -->
 <script src="/static/assets/js/lib/mmc-common.js"></script>
 <script src="/static/assets/js/lib/mmc-chat.js"></script>
-<!--  Chart js -->
+<!--  Chart bootstrap -->
 <script src="/static/assets/js/lib/chart-js/Chart.bundle.js"></script>
 <script src="/static/assets/js/lib/chart-js/chartjs-init.js"></script>
-<!-- // Chart js -->
+<!-- // Chart bootstrap -->
 <!--  Datamap -->
 <script src="/static/assets/js/lib/datamap/d3.min.js"></script>
 <script src="/static/assets/js/lib/datamap/topojson.js"></script>
