--- a/application/admin/view/classify/create.html
+++ b/application/admin/view/classify/create.html
@@ -6,13 +6,13 @@
             <input type="text" hidden name="id" value="{$classify['id']|default=''}">
 
             <div class="form-group">
-                <label class="col-sm-1">分类名称</label>
+                <label class="col-sm-1 control-label">分类名称</label>
                 <div class="col-sm-11">
                     <input type="text" class="form-control" value="{$classify['name']|default=''}" name="name" placeholder="请输入名称，15个字以内">
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-1">排序</label>
+                <label class="col-sm-1 control-label">排序</label>
                 <div class="col-sm-3">
                     <input type="number" value="{$classify['sort']|default=''}" class="form-control" name="sort">
                 </div>
