--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -7,16 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>bootstrap模板文件</title>
     <!-- ================= Favicon ================== -->
-    <!-- Standard -->
-    <link rel="shortcut icon" href="http://placehold.it/64.png/000/fff">
-    <!-- Retina iPad Touch Icon-->
-    <link rel="apple-touch-icon" sizes="144x144" href="http://placehold.it/144.png/000/fff">
-    <!-- Retina iPhone Touch Icon-->
-    <link rel="apple-touch-icon" sizes="114x114" href="http://placehold.it/114.png/000/fff">
-    <!-- Standard iPad Touch Icon-->
-    <link rel="apple-touch-icon" sizes="72x72" href="http://placehold.it/72.png/000/fff">
-    <!-- Standard iPhone Touch Icon-->
-    <link rel="apple-touch-icon" sizes="57x57" href="http://placehold.it/57.png/000/fff">
     <!-- Styles -->
     <link href="/static/assets/fontAwesome/css/fontawesome-all.min.css" rel="stylesheet">
     <link href="/static/assets/css/lib/themify-icons.css" rel="stylesheet">
@@ -57,10 +47,10 @@
                             class="sidebar-collapse-icon ti-angle-down"></span></a>
                     <ul>
                         <li>
-                            <a>所有帖子</a>
+                            <a href="/post/all">所有帖子</a>
                         </li>
                         <li>
-                            <a href="/page/post/create">创建帖子</a>
+                            <a href="/post/create">创建帖子</a>
                         </li>
                     </ul>
                 </li>
@@ -68,8 +58,8 @@
                     <a class="sidebar-sub-toggle"><i class="ti-package"></i> 分类 <span
                             class="sidebar-collapse-icon ti-angle-down"></span></a>
                     <ul>
-                        <li><a href="/page/classify/all">所有分类</a></li>
-                        <li><a href="/page/classify/create">创建分类</a></li>
+                        <li><a href="/classify/all">所有分类</a></li>
+                        <li><a href="/classify/create">创建分类</a></li>
                     </ul>
                 </li>
             </ul>
