--- a/application/admin/view/post/all.html
+++ b/application/admin/view/post/all.html
@@ -1,1 +1,36 @@
 {layout name='base'}
+<div class="card alert">
+    <div class="card-body">
+        <table class="table table-responsive table-striped">
+            <thead>
+            <tr>
+                <th>id</th>
+                <th>标题</th>
+                <th>简介</th>
+                <th>所属分类</th>
+                <th>更新时间</th>
+                <th>创建时间</th>
+                <th>操作</th>
+            </tr>
+            </thead>
+            <tbody>
+            {volist name='post_list' id='post'}
+            <tr>
+                <th>{$post.id}</th>
+                <td>{$post.title}</td>
+                <td>{$post.intro}</td>
+                <td><span class="label label-info">{$post.classify_name}</span></td>
+                <td>{$post.update_time}</td>
+                <td>{$post.create_time}</td>
+                <td>
+                    <div class="btn-group">
+                        <a class="btn btn-success" href="/post/create/{$post.id}">修改</a>
+                        <a class="btn btn-danger" href="/post/delete/{$post.id}">删除</a>
+                    </div>
+                </td>
+            </tr>
+            {/volist}
+            </tbody>
+        </table>
+    </div>
+</div>
