--- a/application/admin/view/post/create.html
+++ b/application/admin/view/post/create.html
@@ -2,13 +2,13 @@
 
 <div class="card alert">
     <div class="card-body">
-        <form class="form-horizontal" method="post" action="/classify/save">
-            <input type="text" hidden name="id" value="{$classify['id']|default=''}">
+        <form class="form-horizontal" method="post" action="/post/save">
+            <input type="text" hidden name="id" value="{$post['id']|default=''}">
 
             <div class="form-group">
                 <label class="col-sm-1 control-label">标题</label>
                 <div class="col-sm-11">
-                    <input type="text" class="form-control" value="{$classify['name']|default=''}" name="title"
+                    <input type="text" class="form-control" value="{$post['title']|default=''}" name="title"
                            placeholder="请输入标题，15个字以内">
                 </div>
             </div>
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label class="col-sm-1 control-label">简介</label>
                 <div class="col-sm-11">
-                    <input type="text" class="form-control" value="{$classify['name']|default=''}" name="intro"
+                    <input type="text" class="form-control" value="{$post['intro']|default=''}" name="intro"
                            placeholder="请输入内容，150个字以内">
                 </div>
             </div>
@@ -25,20 +25,26 @@
                 <label class="col-sm-1 control-label">选择分类</label>
                 <div class="col-sm-11">
                     <select class="form-control" name="classify_id">
+                        {if $currentClassify!=''}
+                        <option value="{$currentClassify.id}">{$currentClassify.name}</option>
+                        {/if}
                         {volist name='classify_list' id='classify'}
-                        <option value="{$classify.id}">{$classify.name}</option>
+                            {if $classify.name!=$currentClassify.name}
+                                <option value="{$classify.id}">{$classify.name}</option>
+                            {/if}
                         {/volist}
                     </select>
                 </div>
             </div>
 
-            <div class="row" >
+            <div class="row">
 
                 <div class="col-sm-6">
                     <div class="form-group">
                         <label class="col-sm-2 control-label">内容</label>
                         <div class="col-sm-10">
-                            <textarea style="height: 400px;" class="form-control body" placeholder="markdown语法"></textarea>
+                            <textarea style="height: 400px;" name="body" class="form-control body"
+                                      placeholder="markdown语法">{$post.body|default=''}</textarea>
                             <hr>
                             <div class="btn-group btn-group-xs">
                                 <button class="btn btn-success">上传图片</button>
@@ -63,9 +69,8 @@
     $(function () {
         /*内容*/
         let converter = new showdown.Converter();
-        $(".body").on("input propertychange",function () {
+        $(".body").on("input propertychange", function () {
             let html = converter.makeHtml($(this).val());
-            console.log(html);
             $(".html").html(html);
         });
 
@@ -98,7 +103,7 @@
                         },
                     }
                 },
-                classify_id:{
+                classify_id: {
                     validators: {
                         notEmpty: {
                             message: '分类不能为空，请先创建一个分类'
