--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>bootstrap模板文件</title>
+    <title>追风的牧羊人个人博客</title>
     <!-- ================= Favicon ================== -->
     <!-- Styles -->
     <link href="/static/assets/fontAwesome/css/fontawesome-all.min.css" rel="stylesheet">
@@ -85,7 +84,6 @@
 <div class="chat-sidebar">
 
 </div>
-<!-- END chat Sidebar-->
 <div class="content-wrap">
     <div class="main">
         <div class="container-fluid">
@@ -113,10 +111,11 @@
             <!--内容-->
             <div class="main-content">
                 {__CONTENT__}
+
+                追风的模样人的博客
             </div>
         </div>
     </div>
-
 </div>
 </body>
 
