--- a/application/admin/view/classify/all.html
+++ b/application/admin/view/classify/all.html
@@ -1,7 +1,7 @@
 {layout name='base'}
 <div class="card alert">
     <div class="card-body">
-        <table class="table table-responsive table-striped">
+        <table class="table table-responsive table-striped table-hover">
             <thead>
             <tr>
                 <th>id</th>
