--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -46,3 +46,81 @@
         </div>
     </div>
 </div>
+
+<div class="card row">
+    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+    <div id="main" class="col-md-6" style="height:500px;"></div>
+</div>
+
+<script type="text/javascript">
+    // 基于准备好的dom，初始化echarts实例
+    let myChart = echarts.init(document.getElementById('main'));
+
+    myChart.setOption(option = {
+        title: {
+            text: '帖子占比',
+            left: 'center',
+            top: 20,
+            textStyle: {
+                color: '#ccc'
+            }
+        },
+        tooltip: {
+            trigger: 'item',
+            formatter: "{a} <br/>{b} : {c} ({d}%)"
+        },
+
+        visualMap: {
+            show: false,
+            min: 80,
+            max: 600,
+            inRange: {
+
+            }
+        },
+    });
+
+    myChart.setOption({
+        series : [
+            {
+                name:'帖子',
+                type:'pie',
+                radius : '55%',
+                center: ['50%', '50%'],
+                data:[
+                    /*{volist name='classify_list' id='classify'}*/
+                        {value:'{$classify.post_num}',name:'{$classify.name}'},
+                    /*{/volist}*/
+                ].sort(function (a, b) { return a.value - b.value; }),
+                roseType: 'radius',
+                label: {
+                    normal: {
+                        textStyle: {
+                            color: '#000'
+                        }
+                    }
+                },
+                labelLine: {
+                    normal: {
+                        lineStyle: {
+                            color: '#000'
+                        },
+                    }
+                },
+                itemStyle: {
+                    normal: {
+                        color: "#009688",
+                        shadowBlur: 200,
+                        shadowColor: 'rgba(0, 0, 0, 0.5)'
+                    }
+                },
+                animationType: 'scale',
+                animationEasing: 'elasticOut',
+                animationDelay: function (idx) {
+                    return Math.random() * 200;
+                }
+            }
+        ]
+    });
+
+</script>
