--- a/application/admin/view/classify/all.html
+++ b/application/admin/view/classify/all.html
@@ -18,8 +18,8 @@
                 <td>{$classify.sort}</td>
                 <td>
                     <div class="btn-group">
-                        <a class="btn btn-success" href="/classify/create/{$classify.id}">修改</a>
-                        <a class="btn btn-danger" href="/classify/delete/{$classify.id}">删除</a>
+                        <a class="btn btn-success" href="/admin/classify/create/{$classify.id}">修改</a>
+                        <a class="btn btn-danger" href="/admin/classify/delete/{$classify.id}">删除</a>
                     </div>
                 </td>
             </tr>
