--- a/application/admin/view/post/create.html
+++ b/application/admin/view/post/create.html
@@ -2,7 +2,7 @@
 
 <div class="card alert">
     <div class="card-body">
-        <form class="form-horizontal" method="post" action="/post/save">
+        <form class="form-horizontal" method="post" action="/admin/post/save" autocomplete='off'>
             <input type="text" hidden name="id" value="{$post['id']|default=''}">
 
             <div class="form-group">
