--- a/application/admin/view/classify/create.html
+++ b/application/admin/view/classify/create.html
@@ -2,7 +2,7 @@
 
 <div class="card alert">
     <div class="card-body">
-        <form class="form-horizontal" method="post" action="/classify/save">
+        <form class="form-horizontal" method="post" action="/admin/classify/save" autocomplete="off">
             <input type="text" hidden name="id" value="{$classify['id']|default=''}">
 
             <div class="form-group">
