--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -28,6 +28,6 @@
                     </ul>
                 </li>
             </ul>
-        </div><!--/.nav-collapse -->
+        </div>
     </div>
 </nav>
