--- a/application/admin/view/main/index.html
+++ b/application/admin/view/main/index.html
@@ -48,13 +48,46 @@
 </div>
 
 <div class="card row">
-    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-    <div id="main" class="col-md-6" style="height:500px;"></div>
+    <div id="post" class="col-md-6" style="height:500px;"></div>
+    <div class="col-md-6">
+        <h4>接口列表</h4>
+        <table class="table table-responsive">
+            <thead>
+            <tr>
+                <th>路径</th>
+                <th>请求方式</th>
+                <th>详细说明</th>
+            </tr>
+            </thead>
+            <tbody class="url">
+
+            </tbody>
+        </table>
+
+        <script>
+            new Promise(resolve => {
+                $.get("/static/tsconfig.json",function (res) {
+                    resolve(res.url);
+                })
+            }).then(data=>{
+                data.forEach(item=>{
+                    $(".url").append(`
+                        <tr>
+                            <td>${item.port}</td>
+                            <td><span class="label ${item.method==='get'?'label-success':'label-danger'}">${item.method}</span></td>
+                            <td>${item.explain}</td>
+                        </tr>
+                    `)
+                })
+            })
+
+        </script>
+    </div>
 </div>
 
 <script type="text/javascript">
     // 基于准备好的dom，初始化echarts实例
-    let myChart = echarts.init(document.getElementById('main'));
+    let myChart = echarts.init(document.getElementById('post'));
 
     myChart.setOption(option = {
         title: {
