--- a/application/admin/view/post/all.html
+++ b/application/admin/view/post/all.html
@@ -42,7 +42,7 @@
                 <th>{$post.id}</th>
                 <td>{$post.title}</td>
                 <td>{$post.intro}</td>
-                <td><span class="label label-info">{$post.classify_name}</span></td>
+                <td><span class="badge badge-info">{$post.classify_name}</span></td>
                 <td>{$post.update_time}</td>
                 <td>{$post.create_time}</td>
                 <td>
