--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -54,6 +54,8 @@
                 {else}
                     <a href="/login" style="color: #fff;">登录</a>
                 {/if}
+                &nbsp;
+                <a href="/" style="color: #fff;">返回首页</a>
             </li>
         </ul>
 
@@ -63,7 +65,7 @@
 
 </div>
 <div class="content-wrap">
-    <div class="main">
+    <div class="main" style="overflow: auto;">
         <div class="container-fluid">
             <div class="row">
                 <!--标题-->
