--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -1,4 +1,4 @@
-{layout name='base'}
+{include file='common@public/header'}
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -8,26 +8,27 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Bootstrap theme</a>
+            <a class="navbar-brand" href="/">追风的牧羊人个人博客</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="#">主页</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="#">Separated link</a></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
-                </li>
+                <li><a href="/admin">控制台</a></li>
             </ul>
         </div>
     </div>
 </nav>
+
+<div class="container" style="margin-top: 60px">
+    <div>
+        {volist name='post_list' id='post'}
+        <div class="col-lg-4">
+            <h2>{$post.title}</h2>
+            <p>{$post.intro}</p>
+            <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
+        </div>
+        {/volist}
+    </div>
+</div>
+{include file='common@public/footer'}
