--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -65,7 +65,7 @@
 
 </div>
 <div class="content-wrap">
-    <div class="main" style="overflow: auto;">
+    <div class="main">
         <div class="container-fluid">
             <div class="row">
                 <!--标题-->
@@ -81,7 +81,7 @@
                     <div class="page-header">
                         <div class="page-title">
                             <ol class="breadcrumb text-right">
-                                <li><a href="javascript:;">主页</a></li>
+                                <li><a href="/admin">主页</a></li>
                                 <li class="active">{$title}</li>
                             </ol>
                         </div>
