--- a/application/admin/view/main/index.html
+++ b/application/admin/view/main/index.html
@@ -1,5 +1,33 @@
 {layout name='base'}
 
+{if $Request.session.user.email==null}
+<!--登录弹框-->
+<div class="modal fade login" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content" style="width: 700px;margin: 0 auto">
+            <div class="modal-body" style="padding: 50px">
+                <img width="500" src="/static/img/office.png" alt="" style="display: block;margin: 0 auto">
+                <h4 class="text-center">您在执行敏感操作时，需要 <span class="badge badge-danger">管理员权限</span>，是否立即登录？</h4>
+                <hr>
+                <p class="text-center"><button class="btn btn-default modal-delete">取消</button>&nbsp;<a class="btn btn-success" href="/login">登录</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    $(function () {
+        $(".login").modal({
+            show:true
+        });
+
+        $(".modal-delete").click(function () {
+            $('.login').modal('hide')
+        })
+    })
+
+</script>
+{/if}
+
 <div class="row">
     <div class="col-lg-3">
         <a class="card statistics" href="/admin/post/all">
@@ -47,6 +75,82 @@
     </div>
 </div>
 
+<div class="card row">
+    <div id="post" class="col-md-6" style="height:500px;"></div>
+    <script type="text/javascript">
+        // 基于准备好的dom，初始化echarts实例
+        let myChart = echarts.init(document.getElementById('post'));
+
+        myChart.setOption(option = {
+            title: {
+                text: '帖子占比',
+                left: 'center',
+                top: 20,
+                textStyle: {
+                    color: '#ccc'
+                }
+            },
+            tooltip: {
+                trigger: 'item',
+                formatter: "{a} <br/>{b} : {c} ({d}%)"
+            },
+
+            visualMap: {
+                show: false,
+                min: 80,
+                max: 600,
+                inRange: {}
+            },
+        });
+
+        myChart.setOption({
+            series: [
+                {
+                    name: '帖子',
+                    type: 'pie',
+                    radius: '55%',
+                    center: ['50%', '50%'],
+                    data: [
+                        /*{volist name='classify_list' id='classify'}*/
+                        {value: '{$classify.post_num}', name: '{$classify.name}'},
+                        /*{/volist}*/
+                    ].sort(function (a, b) {
+                        return a.value - b.value;
+                    }),
+                    roseType: 'radius',
+                    label: {
+                        normal: {
+                            textStyle: {
+                                color: '#000'
+                            }
+                        }
+                    },
+                    labelLine: {
+                        normal: {
+                            lineStyle: {
+                                color: '#000'
+                            },
+                        }
+                    },
+                    itemStyle: {
+                        normal: {
+                            color: "#009688",
+                            shadowBlur: 200,
+                            shadowColor: 'rgba(0, 0, 0, 0.5)'
+                        }
+                    },
+                    animationType: 'scale',
+                    animationEasing: 'elasticOut',
+                    animationDelay: function (idx) {
+                        return Math.random() * 200;
+                    }
+                }
+            ]
+        });
+    </script>
+</div>
+
+
 <style>
     .statistics {
         display: block;
@@ -58,8 +162,12 @@
 </style>
 
 <div class="card row port">
-
-
+    <div class="card-header">
+        <h4>接口总览</h4>
+    </div>
+    <div class="alert alert-info">
+        <strong>/[:id]</strong>表示选填，<strong>/:id</strong>表示必填
+    </div>
     <script>
         setTable('post');
         setTable('classify');
@@ -134,81 +242,3 @@
     </script>
 </div>
 
-<div class="card row">
-    <div id="post" class="col-md-6" style="height:500px;"></div>
-
-</div>
-
-
-<script type="text/javascript">
-    // 基于准备好的dom，初始化echarts实例
-    let myChart = echarts.init(document.getElementById('post'));
-
-    myChart.setOption(option = {
-        title: {
-            text: '帖子占比',
-            left: 'center',
-            top: 20,
-            textStyle: {
-                color: '#ccc'
-            }
-        },
-        tooltip: {
-            trigger: 'item',
-            formatter: "{a} <br/>{b} : {c} ({d}%)"
-        },
-
-        visualMap: {
-            show: false,
-            min: 80,
-            max: 600,
-            inRange: {}
-        },
-    });
-
-    myChart.setOption({
-        series: [
-            {
-                name: '帖子',
-                type: 'pie',
-                radius: '55%',
-                center: ['50%', '50%'],
-                data: [
-                    /*{volist name='classify_list' id='classify'}*/
-                    {value: '{$classify.post_num}', name: '{$classify.name}'},
-                    /*{/volist}*/
-                ].sort(function (a, b) {
-                    return a.value - b.value;
-                }),
-                roseType: 'radius',
-                label: {
-                    normal: {
-                        textStyle: {
-                            color: '#000'
-                        }
-                    }
-                },
-                labelLine: {
-                    normal: {
-                        lineStyle: {
-                            color: '#000'
-                        },
-                    }
-                },
-                itemStyle: {
-                    normal: {
-                        color: "#009688",
-                        shadowBlur: 200,
-                        shadowColor: 'rgba(0, 0, 0, 0.5)'
-                    }
-                },
-                animationType: 'scale',
-                animationEasing: 'elasticOut',
-                animationDelay: function (idx) {
-                    return Math.random() * 200;
-                }
-            }
-        ]
-    });
-
-</script>
