--- a/application/index/view/index/home.html
+++ b/application/index/view/index/home.html
@@ -1,34 +1,34 @@
-{include file='common@public/header'}
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">追风的牧羊人个人博客</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">主页</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="/admin">控制台</a></li>
-            </ul>
+{layout name='base'}
+<div class="container" style="margin-top: 10px">
+    {volist name='post_list' id='post'}
+    <div class="card" style="margin-bottom: 5px;position: relative">
+        <div class="card-body">
+            <h5 class="card-title">{$post.title} <span class="badge badge-success">{$post.classify_name}</span></h5>
+            <p class="card-text">{$post.intro}</p>
+            <a href="#" class="btn btn-primary">查看详情</a>
+            <span style="position: absolute;right: 20px;top: 20px;" class="pull-right">{$post.create_time}</span>
         </div>
     </div>
-</nav>
+    {/volist}
+    <hr>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            {for start="1" end="$count+1" name='num'}
+                <li class="page-item {$current_page==$num?'active':''}"><a class="page-link" href="/{$num}">{$num}</a></li>
+            {/for}
 
-<div class="container" style="margin-top: 60px">
-    <div>
-        {volist name='post_list' id='post'}
-        <div class="col-lg-4">
-            <h2>{$post.title}</h2>
-            <p>{$post.intro}</p>
-            <p><a class="btn btn-primary" href="#" role="button">View details »</a></p>
-        </div>
-        {/volist}
-    </div>
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
-{include file='common@public/footer'}
