--- a/application/index/view/base.html
+++ b/application/index/view/base.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>追风的牧羊人个人博客</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
     <link rel="stylesheet"
           href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
           integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+    {include file='common@public/script'}
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">追风的牧羊人个人博客</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 10px">
+    <a class="navbar-brand" href="/">追风的牧羊人个人博客</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,7 +26,7 @@
                 <a class="nav-link" href="/author">关于作者</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/admin">控制台</a>
+                <a class="nav-link" target="_blank" href="/admin">控制台</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
