--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -1,4 +1,30 @@
-{include file='common@public/header'}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>追风的牧羊人个人博客</title>
+    <!-- ================= Favicon ================== -->
+    <!-- Styles -->
+    <link href="/static/assets/fontAwesome/css/fontawesome-all.min.css" rel="stylesheet">
+    <link href="/static/assets/css/lib/themify-icons.css" rel="stylesheet">
+    <link href="/static/assets/css/lib/sidebar.css" rel="stylesheet">
+    <link href="/static/assets/css/lib/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/assets/css/lib/nixon.css" rel="stylesheet">
+    <link href="/static/assets/lib/lobipanel/css/lobipanel.min.css" rel="stylesheet">
+    <link href="/static/assets/css/style.css" rel="stylesheet">
+    {include file='common@public/script'}
+
+    <script src="/static/assets/js/lib/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-validator/0.5.3/js/bootstrapValidator.min.js"></script>
+    <!--文件上传-->
+    <link rel="stylesheet" href="/static/bootstrap/fileinput.min.css">
+    <script src="/static/bootstrap/fileinput.min.js"></script>
+    <script src="/static/bootstrap/fileinput_locale_zh.js"></script>
+</head>
+
+<body>
 <!--侧边导航栏-->
 <div class="sidebar sidebar-hide-to-small sidebar-shrink sidebar-gestures">
     <div class="nano">
@@ -96,4 +122,30 @@
         </div>
     </div>
 </div>
-{include file='common@public/footer'}
+<!-- jquery vendor -->
+<script src="/static/assets/js/lib/jquery.nanoscroller.min.js"></script>
+<!-- nano scroller -->
+<script src="/static/assets/js/lib/sidebar.js"></script>
+
+<script src="/static/assets/lib/lobipanel/js/lobipanel.js"></script>
+
+<!-- // Datamap -->
+<script src="/static/assets/js/scripts.js"></script>
+<!-- scripit init-->
+<script>
+    $(document).ready(function () {
+        $('#lobipanel-custom-control').lobiPanel({
+            reload: false,
+            close: false,
+            editTitle: false
+        });
+    });
+</script>
+</body>
+<style>
+    pre{
+        margin: 0;
+        padding: 0;
+    }
+</style>
+</html>
