--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -14,6 +14,7 @@
     <link href="/static/assets/css/lib/nixon.css" rel="stylesheet">
     <link href="/static/assets/lib/lobipanel/css/lobipanel.min.css" rel="stylesheet">
     <link href="/static/assets/css/style.css" rel="stylesheet">
+    <link href="/static/layui/css/layui.css">
     {include file='common@public/script'}
 
     <script src="/static/assets/js/lib/bootstrap.min.js"></script>
@@ -142,6 +143,10 @@
     pre{
         margin: 0;
         padding: 0;
+    }
+
+    .layui-upload-file{
+        display: none !important;
     }
 </style>
 </html>
